tests/ui/pattern/slice-pattern-refutable.stderr
error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:14:28
   |
LL |     let [a, b, c] = Zeroes.into() else {
   |         ---------          ^^^^
   |         |
   |         type must be known at this point
   |
help: try using a fully qualified path to specify the expected types
   |
LL -     let [a, b, c] = Zeroes.into() else {
LL +     let [a, b, c] = <Zeroes as Into<T>>::into(Zeroes) else {
   |

error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:21:31
   |
LL |     if let [a, b, c] = Zeroes.into() {
   |            ---------          ^^^^
   |            |
   |            type must be known at this point
   |
help: try using a fully qualified path to specify the expected types
   |
LL -     if let [a, b, c] = Zeroes.into() {
LL +     if let [a, b, c] = <Zeroes as Into<T>>::into(Zeroes) {
   |

error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:28:31
   |
LL |     if let [a, b, c] = Zeroes.into() {
   |            ---------          ^^^^
   |            |
   |            type must be known at this point
   |
help: try using a fully qualified path to specify the expected types
   |
LL -     if let [a, b, c] = Zeroes.into() {
LL +     if let [a, b, c] = <Zeroes as Into<T>>::into(Zeroes) {
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
